# moklabs-landing

./: .browserslistrc  .env.example  .env.local.example  .gitignore  .prettierignore  .swcrc  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_ISSUE.md  Política de Privacidade.md  README.md  VERCEL_MONOREPO_SETUP.md  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.js  tailwind.config.ts  tasks.md  tsconfig.json  tsconfig.node.json  turbo.json  vercel.json  vite.config.js
apps/pnld-ai-service/: .dockerignore  .env.example  CONTAINER_REPRODUCIBILITY.md  CONVERSATION_HISTORY_API.md  Dockerfile  LIST_DOCUMENTS_API.md  LOGGING_OBSERVABILITY.md  MIGRATION_NOTES.md  PDF_UPLOAD_API.md  QUERY_OPTIMIZATIONS.md  QUICKSTART_CACHING.md  README.md  STREAMING_API.md  WINDOWS_REDIS_SETUP.md  apply_migration.py  apply_migration.sql  benchmark_hybrid_search.py  benchmark_mmr.py  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  run_migration.py  test_concurrency.py  test_conversation_history.py  test_document_detail.py  test_hybrid_search.py  test_list_documents.py  test_mmr_selector.py  test_query_performance_benchmark.py  test_query_processor.py  test_reranker.py  test_semantic_chunker.py  test_specific_doc.py  test_streaming_production.py  test_textless_pdf.py  test_textless_pdf_upload.py  test_vector_search.py
apps/pnld-ai-service/app/: __init__.py  config.py  main.py
apps/pnld-ai-service/config/: acronyms.json  synonyms.json
apps/pnld-ai-service/documentation/: DOCUMENT_DELETION_API.md  PDF_PROCESSING.md  (+2 more)
(+355 files in other folders)
