[tool.poetry]
name = "pnld-ai-service"
version = "0.1.0"
description = "FastAPI backend for PNLD RAG-based chat functionality with Supabase"
authors = ["Mok Labs"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
supabase = "^2.0.0"
openai = "^1.3.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
pgvector = "^0.2.0"
httpx = "^0.27.0"
pypdf = "^4.0.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
